--- a/src/app/components/students/list/students.component.html
+++ b/src/app/components/students/list/students.component.html
@@ -10,6 +10,10 @@
   }
 </style>
 <div class="container">
+  <div style="padding: 20px; text-align: right; right: 20% !important;">
+    <a type="button" href="/add" class="btn btn-success" style="margin: 10px">Add</a>
+    <a type="button" class="btn btn-primary" style="margin: 10px">Export to excel</a>
+  </div>
   <table>
     <thead>
     <tr>
@@ -55,7 +59,7 @@
     </tbody>
   </table>
 </div>
-<div align="center" style="padding: 10px; position: fixed; top: 80%; left:40%">
+<div align="center" style="padding: 10px; position: fixed; top: 90%; left:40%">
   <pagination-controls
     previousLabel="Prev"
     nextLabel="Next"
