--- a/src/app/components/students/add/add.component.html
+++ b/src/app/components/students/add/add.component.html
@@ -1,1 +1,102 @@
-<p>add works!</p>
+<style>
+  input {
+    padding: 5px;
+  }
+
+  td {
+    padding-left: 10px;
+  }
+
+  select, option {
+    padding: 5px
+  }
+</style>
+
+<div class="container" align="center" style="padding: 20px">
+  <form #editFrom="ngForm" (ngSubmit)="onSubmit(editFrom.value)" ngNativeValidate>
+    <table>
+      <tr>
+        <td>
+          <label for="fname">First Name</label>
+        </td>
+        <td>
+          <input type="text" id="fname" name="firstname" placeholder="Your name.." required ngModel>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <label for="lname">Last Name</label>
+        </td>
+        <td>
+          <input type="text" id="lname" name="lastname" placeholder="Your last name.." required  ngModel>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <label for="mname">Middle Name</label>
+        </td>
+        <td>
+          <input type="text" id="mname" name="middlename" placeholder="Your middle name.." ngModel>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <label for="desc">Description</label>
+        </td>
+        <td>
+          <input type="text" id="desc" name="description" placeholder="Your desc.." ngModel>
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          <label for="ssday">Study start date</label>
+        </td>
+        <td>
+          <input type="date" id="ssday" name="ssday" placeholder="Study start date.." required ngModel>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <label for="seday">Study end date</label>
+        </td>
+        <td>
+          <input type="date" id="seday" name="seday" placeholder="Study end date.." required ngModel>
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          <label for="studiesId">Study</label>
+        </td>
+        <td>
+          <select id="studiesId" name="studiesId" required ngModel>
+            <option *ngFor="let study of studies" [value]="study.id">
+              {{study?.name}}
+            </option>
+          </select>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Gender
+        </td>
+
+        <input type="radio" id="male" name="gender" value="Male" required ngModel>
+        <label for="male">Male</label>
+
+        <input type="radio" id="female" name="gender" value="Female" required ngModel>
+        <label for="female">Female</label><br>
+      </tr>
+      <tr>
+        <td>
+          <label for="birthDate">Birth date</label>
+        </td>
+        <td>
+          <input type="date" id="birthDate" name="birthDate" placeholder="Birth date.."  required ngModel>
+        </td>
+      </tr>
+    </table>
+    <button type="submit" style="margin:10px;" class="btn btn-primary">Save</button>
+  </form>
+</div>
