--- a/src/app/components/students/list/students.component.html
+++ b/src/app/components/students/list/students.component.html
@@ -34,7 +34,7 @@
       <th>Gender</th>
       <th>BirthDate</th>
       <th>CreatedAt</th>
-      <th colspan="2">Action</th>
+      <th colspan="3">Action</th>
     </tr>
     </thead>
     <tbody>
@@ -54,6 +54,9 @@
       <td>{{student.gender}}</td>
       <td>{{student.birthDate}}</td>
       <td>{{student.createdAt}}</td>
+      <td>
+        <a [routerLink]="['/view', student.id]" class="btn btn-primary"><span class="bi bi-eye"></span></a>
+      </td>
       <td>
         <!--   This for get student   -->
         <a [routerLink]="['/students', student.id]" class="btn btn-secondary" type="button"><span
